--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ a:hover{
 }
 
 .container{ 
-    max-width: 1550px;
+    max-width: 1650px;
     width: 100%;
     margin: 0 auto;
     padding: 0 2rem;
@@ -314,7 +314,8 @@ a:hover{
     height: 60vh;
     display: flex;
     align-items: flex-end;
-    padding: 5rem 0;
+    padding: 3rem 3.5rem;
+    border-radius: 50px;
 }
 #hero-banner .hero-title{
     color: #FFF;
@@ -327,7 +328,7 @@ a:hover{
     padding: 0;
 }
 .front-page .welcome{ 
-    padding: 0 0 4rem;
+    padding: 0 1rem 4rem;
 }
 .front-page .welcome p{
     font-size: 1.2rem;
@@ -347,6 +348,44 @@ a:hover{
 }
 .front-page .intro .content{ 
     flex: 1;
+}
+.front-page .menus{
+    padding: 4rem 0 0;
+    gap: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+.front-page .menus .menu{
+    width: calc( 50% - 1.5rem );
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+.front-page .menus .menu .image, .front-page .menus .menu .image img{ 
+    width: 220px;
+}
+.front-page .menus .menu .content{
+    flex: 1;
+    align-self: center;
+}
+.front-page .menus .menu .content .menu-title{ 
+    font-size: 2rem;
+    color: var(--secondary);
+}
+.front-page .menus .menu .content .menu-button{
+    display: block;
+    width: fit-content;
+    padding: 1rem 1.5rem;
+    margin: 1rem 0 0;
+    background-color: var(--secondary-light);
+    color: var(--primary-text);
+    text-decoration: none;
+    transition: all .2s ease;
+    border-radius: 5px;
+}
+.front-page .menus .menu .content .menu-button:hover{
+    color: #FFF;
+    background-color: #000;
 }
 
 /* Menu Pages */
@@ -377,7 +416,7 @@ a:hover{
     position: absolute;
     left: 0;
     top: 0;
-    transition: all .2s ease;
+    transition: all .25s ease-in-out;
     transform-origin: center;
     transform: scale(1);
 }
@@ -438,6 +477,14 @@ a:hover{
 }
 .menu-page .menu-list .menu .item .suitable-for .gluten-free{
     background-color: #f1e49c;
+}
+.menu-page .menu-list .menu .item .price-notes{
+    padding: 0.5rem 0.8rem;
+    margin: 0 0 0.75rem;
+    background-color: var(--secondary);
+    color: #FFF;
+    border-radius: 5px;
+    font-weight: 700;
 }
 
 /* Contact Page */
@@ -552,6 +599,64 @@ a:hover{
 .contact-form .buttons .secondary-button:active, .contact-form .buttons .secondary-button:focus{
     background-color: var(--secondary-light);
     color: #000;
+}
+
+/* Call to Action */
+.cta{ 
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 50px;
+    margin: 0 0 4rem;
+}
+.cta.content-right{
+    flex-direction: row;
+}
+.cta.content-bottom{
+    flex-direction: column;
+}
+.cta .image{ 
+    overflow: hidden;
+    position: relative;
+}
+.cta.content-right .image{
+    width: 450px; 
+    border-radius: 50px 0 0 50px;
+}
+.cta.content-bottom .image{
+    padding-bottom: 57.6%; 
+    border-radius: 50px 50px 0 0;
+}
+.cta .image img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.cta .content{ 
+    padding: 4rem 3rem;
+    flex: 1;
+    align-self: center;
+}
+.cta .content .cta-button{
+    display: block;
+    width: fit-content;
+    font-size: 1.3rem;
+    font-family: var(--heading-typography);
+    padding: 1rem 2rem;
+    margin: 1.5rem 0 0;
+    border: none;
+    border-radius: 5px;
+    transition: all .2s ease;
+    cursor: pointer;
+    text-decoration: none;
+    background-color: #FFF;
+    color: var(--accent);
+}
+.cta .content .cta-button:hover{
+    background-color: #000;
+    color: #FFF;
 }
 
 /* Responsive */
