--- a/style.css
+++ b/style.css
@@ -150,8 +150,10 @@ a:hover{
 .page-container{
     padding-top: 4rem;
     padding-bottom: 4rem;
+    display: flex;
+    gap: 5rem;
+    flex-direction: column;
 }
-.page-container
 
 .bg-primary{
     background-color: var(--primary);
@@ -328,7 +330,7 @@ a:hover{
     padding: 0;
 }
 .front-page .welcome{ 
-    padding: 0 1rem 4rem;
+    padding: 0 1rem;
 }
 .front-page .welcome p{
     font-size: 1.2rem;
@@ -350,7 +352,6 @@ a:hover{
     flex: 1;
 }
 .front-page .menus{
-    padding: 4rem 0 0;
     gap: 3rem;
     display: flex;
     flex-wrap: wrap;
@@ -386,6 +387,10 @@ a:hover{
 .front-page .menus .menu .content .menu-button:hover{
     color: #FFF;
     background-color: #000;
+}
+.front-page .map iframe{ 
+    width: 100%;
+    height: 450px;
 }
 
 /* Menu Pages */
@@ -520,6 +525,16 @@ a:hover{
 .contact-details .info a:hover{
     color: var(--link-light-hover);
 }
+.contact-details .info .msg{ 
+    text-decoration: none;
+}
+.contact-details .info .msg .label{
+    display: none; 
+}
+.contact-details .info .msg .network-icon{
+    font-size: 1.6rem;
+    padding: 0 0.5rem 0 0;
+}
 .contact-form{ 
     padding: 50px; 
     border-radius: 30px; 
@@ -606,7 +621,6 @@ a:hover{
     display: flex;
     flex-wrap: wrap;
     border-radius: 50px;
-    margin: 0 0 4rem;
 }
 .cta.content-right{
     flex-direction: row;
