--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ a:hover{
     color: #FFF;
     background-color: #000;
 }
-.front-page .map iframe{ 
+.front-page .map iframe, .contact-page .map iframe{ 
     width: 100%;
     height: 450px;
 }
@@ -543,7 +543,8 @@ a:hover{
     border-radius: 30px; 
     background-color: #FFF; 
     margin: 0 auto; 
-    max-width: 1100px 
+    max-width: 1100px;
+    width: 100%;
 }
 .contact-form .fields-two{
     display: flex;
