--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@
     --divider: #C4BEB5;
 
     --page-title-background: linear-gradient(90deg, rgba(207,182,145,0) 0%, rgba(207,182,145,.2) 50%, rgba(207,182,145,.75) 100%);
+    
+    --success: #cce5d4;
+    --success-dark: #165016;
+    --info: #cce4f6;
+    --info-dark: #0a4876;
+    --warning: #fde8cd;
+    --warning-dark: #7a3e00;
+    --danger: #f3d1d6;
+    --danger-dark: #6e1c22; 
 
     --link: #911f43;
     --link-hover: #801A1B;
@@ -29,28 +38,28 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/montserrat/montserrat-v29-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat/montserrat-v29-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: italic;
     font-weight: 400;
-    src: url('/fonts/montserrat/montserrat-v29-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat/montserrat-v29-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    src: url('/fonts/montserrat/montserrat-v29-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat/montserrat-v29-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Montserrat';
     font-style: italic;
     font-weight: 700;
-    src: url('/fonts/montserrat/montserrat-v29-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat/montserrat-v29-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* Playfair Display - Google Fonts */
 @font-face {
@@ -58,28 +67,28 @@
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/playfair-display/playfair-display-v37-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/playfair-display/playfair-display-v37-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Playfair Display';
     font-style: italic;
     font-weight: 400;
-    src: url('/fonts/playfair-display/playfair-display-v37-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/playfair-display/playfair-display-v37-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Playfair Display';
     font-style: normal;
     font-weight: 700;
-    src: url('/fonts/playfair-display/playfair-display-v37-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/playfair-display/playfair-display-v37-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
     font-family: 'Playfair Display';
     font-style: italic;
     font-weight: 700;
-    src: url('/fonts/playfair-display/playfair-display-v37-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/playfair-display/playfair-display-v37-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 *{
@@ -314,7 +323,7 @@ a:hover{
 
 /* Home Page */
 #hero-banner{
-    background: url('images/stock/hero-banner.jpg') center no-repeat;
+    background: url('../images/stock/hero-banner.jpg') center no-repeat;
     background-size: cover;
     height: 60vh;
     display: flex;
@@ -579,6 +588,9 @@ a:hover{
     outline: solid 1px var(--primary);
     box-shadow: 0 1px 3px rgba(77, 105, 58, .5);
 }
+.contact-form .iti{
+    width: 100%;
+}
 .contact-form textarea{ 
     height: 225px;
     resize: none;
@@ -621,6 +633,45 @@ a:hover{
 .contact-form .buttons .secondary-button:active, .contact-form .buttons .secondary-button:focus{
     background-color: var(--secondary-light);
     color: #000;
+}
+/* Notices */
+.contact-form .notice{ 
+    display: none; 
+}
+.contact-form .notice .alert{ 
+    display: flex; 
+    gap: 15px; 
+    padding: 1rem 1.5rem; 
+    border-radius: 3px; 
+    border: solid 1px; 
+    margin: 0 0 2rem; 
+    align-items: center; 
+    transition: opacity 1s ease-out; 
+    opacity: 1; 
+} 
+.contact-form .notice .alert .icon{ 
+    font-size: 1.3rem; 
+    width: 2rem; 
+    height: 2rem; 
+    line-height: 2rem; 
+    text-align: center; 
+}
+.contact-form .notice .alert .text{ 
+    flex: 1; 
+}
+.contact-form .notice .alert .text p{ 
+    padding: 0; 
+    margin: 0; 
+}
+.contact-form .notice .alert.success{ 
+    background-color: var(--success); 
+    color: var(--success-dark); 
+    border-color: var(--success-dark); 
+}
+.contact-form .notice .alert.error{ 
+    background-color: var(--danger); 
+    color: var(--danger-dark); 
+    border-color: var(--danger-dark); 
 }
 
 /* Call to Action */
